# 802.1x-supplicant

./: 8021x.dmp  SimuNAS.rar  Supplicant.rar  eap_radius.dmp  mysupplicant.dmp  配置文档.rar
802.1x-linux/: .cvsignore  ChangeLog  Makefile
802.1x-linux/doc/: README.802.11  README.txt
802.1x-linux/include/: accessor.hh  buffer.hh  etherlink.hh  globals.hh  ll_802_3.hh  ll_eapol.hh  ll_ether.hh  type_identity.hh  type_md5.hh
802.1x-linux/src/: comm.cc  eap.cc  error.cc  etherlink.cc  ll_802_3.cc  ll_ether.cc  main.cc  password.cc  tls.cc  type_identity.cc  type_md5.cc  type_notification.cc
802.1x-linux/tmp/: .cvsignore
Document/: 802.1X用户的IP和MAC、用户名和密码的分别认证实现.doc  IEEE 802_1x Access Control.htm  IP Helper API 使用方法详解（一） - 开发者 - ZDNet China.htm  IP Helper API 使用方法详解（二） - 开发者 - ZDNet China.htm  Simulant.txt  freeradius+mysql.txt  radius_acc.txt  requirements.txt  simu-summary.rtf  sql_ldap_auth.rar  详谈调用winpcap驱动写arp多功能工具.htm
Document/IP Helper API 使用方法详解（一） - 开发者 - ZDNet China.files/: code_sz=1x1_ord=1922200111  developer_sz=1x1_num=
Document/IP Helper API 使用方法详解（二） - 开发者 - ZDNet China.files/: code_sz=1x1_ord=697663096  css.css  planet.css  test_traffic.htm  zdnew.css
Document/详谈调用winpcap驱动写arp多功能工具.files/: plone.css
SimuNAS/: Makefile  SimuNas.cxx  SimuNas.dsp  SimuNas.ncb  SimuNas.sln  SimuNas.vcproj  radproto.cxx  radproto.h  start.bat
SimuNAS/eap/: eap.hh  etherlink.cc  globals.cc  ll_802_3.cc  ll_eapol.cc  ll_ether.cc  ll_ether.hh  md5.h  password.hh  tls.cc  tls.hh  type_md5.cc  type_md5.hh  type_tls.hh
Supplicant/: ConnectingDlg.cpp  DownloadProgressDlg.cpp  DownloadProgressDlg.h  EapEventHandler.cpp  ReadMe.txt  Supplicant.aps  Supplicant.h  Supplicant.rc  Supplicant.rc.bak  Toolkit.h  TrayIcon.cpp  TrayIcon.h  help.doc  licence.txt  resource.hm  复件 restart.bat
Supplicant/Doc/: Supplicant_EAP.mdl  Supplicant_EAP.md~
Supplicant/EAP/: EAP-DLL.cpp  EAP.APS  EAP.vcproj  ReadMe.txt  buffer.hh  comm.hh  eap.cc  etherlink.hh  ll_eapol.hh  md5.c  password.cc  stdafx.h  type_identity.cc  type_tls.hh
Supplicant/Update/: DownloadProgressDlg.cpp  ReadMe.txt  Update.aps  Update.cpp  Update.h
Supplicant/eaps/: comm.hh  eap.cc  eap_tls_packet.cc  error.hh  etherlink.cc.lnx  etherlink.hh.lnx  ll_802_3.cc  ll_eapol.hh  ll_ether.hh  type_md5.cc  type_md5.hh
Supplicant/install/: Supplicant.ism  Supplicant.nsi
TpSupplicant/: TpSupplicant说明文档.doc
freeradius-0.9.3/: aclocal.m4  configure.in  freeradius.ncb  freeradius.sln  freeradius.vcproj
freeradius-0.9.3/doc/: ChangeLog
freeradius-0.9.3/raddb/: acct_users  radiusd.conf.in  sql.conf
freeradius-0.9.3/share/: dictionary  dictionary.cisco.vpn3000  dictionary.nomadix  dictionary.tunnel
freeradius-0.9.3/src/: Makefile
jointbest/: 802.1X测试说明书_片断.doc  802.1X需求规格说明书_片断.doc  802.1x产品设计说明书_片断.doc  8021x产品简介.doc  readme.doc  success.dmp
jointbest/harborInstall/: Setup.ini  data1.hdr  setup.inx
jointbest/jointbestDot1xAuthenticatorCh2.0/: VPACKET.VXD  dot1xAuthConfig.ini  dot1xAuthConfig.log.bak
jointbest/jointbestDot1xSupplicantCh3.0Beta/: Setup.ini  data1.hdr  setup.inx
wpcapsrc_3_0/winpcap/: readme-cygwin
xsupplicant/: CONTRIBUTIONS  Makefile  Makefile.am  Makefile.in  README  README.wireless_cards  aclocal.m4  config.status  configure  configure.in  mkinstalldirs
xsupplicant/doc/: Makefile  Makefile.am  Makefile.in  builddocs.sh
xsupplicant/doc/code-design/: Makefile  code-design.tex  current_code_flow.fig
xsupplicant/doc/xml-userguide/: appendix1.xml  appendix2.xml  chapter1.xml  chapter2.xml  chapter3.xml  chapter4.xml  chapter5.xml  chapter6.xml  chapter7.xml  userguide.xml
xsupplicant/drivers/: Makefile  Makefile.am  Makefile.in  README
xsupplicant/drivers/FreeBSD/: if_an.c
xsupplicant/drivers/Linux/: atmel_2.1.2.2.keying.patch  madwifi_key_patch-4-2-2004.patch  rekey_patch_orinoco-0.13e
xsupplicant/drivers/OpenBSD/: an.c
xsupplicant/etc/: Makefile  Makefile.am  Makefile.in  xsupplicant.conf
xsupplicant/gui_tools/: Makefile  Makefile.am  Makefile.in
xsupplicant/gui_tools/cli/: Makefile  Makefile.am  Makefile.in
xsupplicant/gui_tools/cli/xsup_monitor/: Makefile  Makefile.am  Makefile.in  xsup_monitor.c
xsupplicant/gui_tools/cli/xsup_set_pwd/: Makefile  Makefile.am  Makefile.in  xsup_set_pwd.c
xsupplicant/gui_tools/common/: gui_interface.c  gui_interface.h
xsupplicant/gui_tools/gui/qt/qt_gremlin/: README  Xsupplicant.ui  Xsupplicant.ui.h  main.cpp  qt_gremlin_xsupplicant.pro
xsupplicant/src/: Makefile  Makefile.in  cmd_handler.c  config.c  config_grammar.y  config_lexicon.l  eap.c  eapol.c  eapol_key_type1.c  interactive.c  ipc_callout.c  key_statemachine.c  profile.c  profile.h  statemachine.c  xsup_debug.c  xsup_debug.h  xsup_driver.c  xsup_err.h  xsup_ipc.c
xsupplicant/src/cardif/linux/: cardif_linux.c
xsupplicant/src/eap_types/leap/: eapleap.c  eapleap.h
xsupplicant/src/eap_types/md5/: eapmd5.c  eapmd5.h
xsupplicant/src/eap_types/mschapv2/: eapmschapv2.c  eapmschapv2.h  mschapv2.c
xsupplicant/src/eap_types/otp/: eapotp.c
xsupplicant/src/eap_types/peap/: eappeap.c  peap_phase2.c  peap_phase2.h
xsupplicant/src/eap_types/sim/: eapsim.c  eapsim.h  simd11.c  simd5.c  sm_handler.c
xsupplicant/src/eap_types/tls/: eaptls.c  tls_crypt.c  tls_funcs.c  tls_funcs.h
xsupplicant/src/eap_types/ttls/: eapttls.c  ttlsphase2.c  ttlsphase2.h
xsupplicant/tools/: Makefile  Makefile.am  Makefile.in  ifup  testusercert.pfx
xsupplicant/tools/config-parser/: Makefile  Makefile.am  Makefile.in  config-parser.c  example.config
修改网卡地址/MacModify/: Readme.txt
修改网卡地址/网卡修改源代码/: macshift.cpp
复件 Supplicant/: ConnectingDlg.h  ConnectionDlg.cpp  ConnectionDlg.h  LoginDlg.cpp  LoginDlg.h  PropertyPages.cpp  PropertyPages.h  Supplicant.cpp  Supplicant.sln  Supplicant.vcproj  Toolkit.cpp  cnlink.rc.bak  resource.h  stdafx.cpp  stdafx.h
复件 Supplicant/Doc/: EAP主要类图.doc
复件 Supplicant/EAP/: EAP-DLL.h  EAP.def  EAP.rc  Resource.h  buffer.cc  comm.cc  eap_tls_packet.cc  eap_tls_packet.hh  eapol.hh  error.cc  globals.hh  ll_802_3.hh  ll_eapol.cc  stdafx.cpp  tls.hh  type_tls.cc  (+2 more)
(+219 files in other folders)
